adding all the files

--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\Admin\hp\new.css">
+    <link rel="stylesheet" href="C:\Users\Admin\hp\current_working_project\new.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,5 +14,6 @@
         <div>ABOUT</div>
         <div>LOCATION</div>
     </div>
+    <p>hey! we are adding new paragraph tag in this </p>
 </body>
 </html>
