--- a/new.html
+++ b/new.html
@@ -15,5 +15,12 @@
         <div>LOCATION</div>
     </div>
     <p>hey! we are adding new paragraph tag in this </p>
+    <form>
+        <input type="text" placeholder="enter the button">
+        <button>Submit</button>
+    </form>
+    <script src="C:\Users\Admin\hp\current_working_project\new.js">
+
+    </script>
 </body>
 </html>
